@@ -1351,10 +1351,12 @@ void ChangeKey::redo()
 //   ChangeKeySig
 //---------------------------------------------------------
 
-ChangeKeySig::ChangeKeySig(KeySig* _keysig, KeySigEvent _ks)
+ChangeKeySig::ChangeKeySig(KeySig* _keysig, KeySigEvent _ks, bool sc, bool sn)
       {
       keysig = _keysig;
       ks     = _ks;
+      showCourtesy = sc;
+      showNaturals = sn;
       }
 
 //---------------------------------------------------------
@@ -1364,8 +1366,16 @@ ChangeKeySig::ChangeKeySig(KeySig* _keysig, KeySigEvent _ks)
 void ChangeKeySig::flip()
       {
       KeySigEvent oe = keysig->keySigEvent();
+      bool sc        = keysig->showCourtesySig();
+      bool sn        = keysig->showNaturals();
+
       keysig->setSubtype(ks);
-      ks = oe;
+      keysig->setShowCourtesySig(showCourtesy);
+      keysig->setShowNaturals(showNaturals);
+
+      showCourtesy = sc;
+      showNaturals = sn;
+      ks           = oe;
       }
 
 //---------------------------------------------------------
